syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.hong.grpc.generated";
option java_outer_classname = "HelloProto";

/**
 * IDL目的 发布rpc服务 service ---> message  message <-------  hello xxx
 */

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns (HelloResponse) {}
}